# Sale_Class

./: .flake8  16.1_main.py  17.1_main.py  README.md  pyproject.toml
report/: index.html
src/: category.py  product.py  utils.py
tests/: __init__.py  conftest.py  test_category.py  test_fixed_product.py  test_new_functionality.py  test_product.py  test_product_legacy.py  test_utils.py
tests/test_data/: products.json
