[project]
name = "sale-class"
version = "0.1.0"
description = ""
authors = [
    {name = "AV_Geyer", email = "arbitr705@gmail.com"}
]
readme = "README.md"
packages = [{include = "src"}]
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.5,<3.0.0"
]

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1,<9.0.0",
    "flake8>=7.3.0,<8.0.0",
    "black>=25.1.0,<26.0.0",
    "isort>=6.0.1,<7.0.0"
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"

[tool.black]
line-length = 119
exclude = '''
/(\.git|\.venv|venv|__pycache__)/
'''

[tool.isort]
profile = "black"
line_length = 119
skip = [".venv", "venv", "__pycache__", ".git"]
known_first_party = ["src"]

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = ["^venv/", "^.venv/"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-v --cov=src --cov-report=term-missing"
